syntax = "proto3";

option csharp_namespace = "Binbi.Parser";

//  Parser service
service Parser {
  // Parses sites by query string
  rpc ParseByQuery (ParseRequest) returns (ParseReply);
}

message ParseRequest {
  // Query string for parsing
  string Query = 1;
  // Report type
  string TypeReport = 2;
}

message Article {
  string Title = 1;
  string Description = 2;
  string PublishDate = 3;
  int64 PublishDateTimeStamp = 4;
  string ArticleUrl = 5;
  string Data = 6;
}

message ParseReply {
  repeated Article Articles = 1;
  int64 TotalCount = 2;
}
