syntax = "proto3";

// Report service
service Report {
  // Returns report by query
  rpc GetReport (GetReportRequest) returns (ReportReply);
}

message GetReportRequest {
  // Query string fot get report
  string Query = 1;
  // Report type
  string TypeReport = 2;
  // Report title
  string Title = 3;
  // Report description
  string Description = 4;
  // Report language
  string Language = 5;
}

message ReportReply {
  string Id = 1;
  string Title = 2;
  string Description = 3;
  string Created = 4;
  string Updated = 5;
  int32 NumberOfSources = 6;
  string Language = 7;
  string TypeReport = 8;
  string ReportTitle = 9;
  string ReportIntroduction = 10;
  string MarketSegmentation = 11;
  string MarketSize = 12;
  string KeyPlayers = 13;
  string ConsumerDemographics = 14;
  string MarketTrends = 15;
  string MarketOpportunities = 16;
  string ReportConclusion = 17;
}